[package]
name = "ultraloglog"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
authors = ["Ruihang Xia <waynestxia@gmail.com>", "Jianshu Zhao <jianshuzhao@yahoo.com>"]
description = "Rust implementation of the UltraLogLog algorithm"
readme = "README.md"
repository = "https://github.com/waynexia/ultraloglog"
keywords = ["ultraloglog", "algorithm", "sketch", "probabilistic", "hyperloglog"]
categories = ["data-structures", "algorithms"]

[lib]
name = "ultraloglog"
crate-type = ["cdylib", "rlib"]

[features]
default = []
serde = ["dep:serde", "dep:bincode"]
python = ["dep:pyo3"]

[dependencies]
bincode = { version = "1.3", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
xxhash-rust = { version = "0.8", default-features = false, features = ["xxh3"] }
pyo3 = { version = "0.24", features = ["extension-module"], optional = true }

[dev-dependencies]
criterion = "0.5"
rand = "0.8"
ahash = "0.8"
komihash = "0.4.1"
polymur-hash = "0.2.2"
wyhash = "0.6.0"
t1ha = "0.1.2"

[[bench]]
name = "ultraloglog"
harness = false
